# researchwiki

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
docs/: CONFIG.md  RELEASE.md  TEMPLATES.md
prompts/: enforcing-p8.md  project-overview.md  skill-interplay-scenarios.md  writing-skill-md.md
skills/wiki-deepscan/: SKILL.md  SPEC.md
skills/wiki-deepscan/reference/: consumed-config.md  examples.md  failure-modes.md  open-questions.md
skills/wiki-fix-stale/: SKILL.md  SPEC.md
skills/wiki-fix-stale/reference/: consumed-config.md  examples.md  failure-modes.md  open-questions.md
skills/wiki-init/: SKILL.md  SPEC.md
skills/wiki-init/reference/: consumed-config.md  examples.md  failure-modes.md  open-questions.md
skills/wiki-init/reference/bundle/: CLAUDE.md
skills/wiki-lint/: SKILL.md  SPEC.md
skills/wiki-lint/reference/: consumed-config.md  examples.md  failure-modes.md  open-questions.md
skills/wiki-log/: SKILL.md  SPEC.md
skills/wiki-log/reference/: auto-link-extraction.md  consumed-config.md  conversational-style.md  examples.md  failure-modes.md  open-questions.md  p8-detection.md  refusal-patterns.md  templates-deep-dive.md
skills/wiki-query/: SKILL.md  SPEC.md
skills/wiki-query/reference/: consumed-config.md  examples.md  failure-modes.md  open-questions.md
skills/wiki-recall/: SKILL.md  SPEC.md
skills/wiki-recall/reference/: consumed-config.md  examples.md  failure-modes.md  open-questions.md
skills/wiki-sync/: SKILL.md  SPEC.md
skills/wiki-sync/reference/: consumed-config.md  examples.md  failure-modes.md  open-questions.md
src/researchwiki/: __init__.py  __main__.py  cli.py  deepscan.py  fixstale.py  frontmatter.py  init.py  log.py  p8.py  query.py  recall.py  sync.py
src/researchwiki/_bundle/: CLAUDE.md  research-wiki.config.yaml
src/researchwiki/_bundle/templates/en/: design_decision.md  (+2 more)
src/researchwiki/lint/: __init__.py  checks.py  report.py  runner.py
src/researchwiki/scanner/: __init__.py  base.py  json_scanner.py  markdown.py  python.py  registry.py
tests/: test_bundle_sync.py  test_deepscan.py  test_fixstale.py  test_frontmatter.py  test_init.py  test_lint_checks.py  test_lint_runner.py  test_log.py  test_p8_detector.py  test_query.py  test_recall.py  test_scanner_json.py  test_scanner_markdown.py  test_scanner_python.py  test_sync.py  test_sync_scan_body.py  test_validate_candidate.py
tests/integration/: _helpers.py  test_pair_fix_stale_clears_lint_finding.py  test_pair_recall_filters_skill_meta.py  test_scenario_audit_query_recall.py  test_scenario_body_link_rot.py  test_scenario_deepscan_stub_grace.py  test_scenario_refactor_remediation.py  test_scenario_wiki_log_full.py
(+5 files in other folders)
