[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "researchwiki"
version = "0.1.0"
description = "ResearchWiki — living research journal with mechanical fact extraction (P1/P3/P7/P8). Eight-skill toolkit for LLM coding agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "TBD" }
authors = [{ name = "ResearchWiki contributors", email = "jeongdamilab@gmail.com" }]
keywords = [
    "research",
    "wiki",
    "knowledge-management",
    "claude-code",
    "claude-code-plugin",
    "llm-tools",
    "research-workflow",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "build>=1.0",
    "twine>=4.0",
]

[project.urls]
Homepage = "https://github.com/apple4ree/researchwiki"
Repository = "https://github.com/apple4ree/researchwiki"
Issues = "https://github.com/apple4ree/researchwiki/issues"

[project.scripts]
wiki = "researchwiki.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
researchwiki = ["_bundle/**/*", "_bundle/**/*.md", "_bundle/**/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
